[package]
name = "graphing_calculator"
version = "0.1.0"
authors = ["Jameson Larsen larsenjameson@gmail.com"]
description = "A simple web graphing calculator using wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/jameson-larsen/graphing-calculator"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.65"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

